--- a/full-stack.html
+++ b/full-stack.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.jobvite.com/digitaltradecareers/job/o1rpbfwM'>Department for International Trade  - Digital, Data and Technology Careers - Full Stack Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/innovecs/jobs/4502583002'>Job Application for Junior Full-Stack Engineer (.NET + JavaScript) at Innovecs</a></h5> 
@@ -70,7 +70,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698628860-fullstack-developer'>Tradeshift Fullstack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698628860-fullstack-developer'>Tradeshift Fullstack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -176,7 +176,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/loandepot/job/oBFQafw0'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/loandepot/job/oBFQafw0'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -232,7 +232,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sHBeKgw1&__jvsc=Twitter&bid=nBZmpMwC'>Brandwatch Careers - Full Stack Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sHBeKgw1&__jvsc=Twitter&bid=nBZmpMwC'>Brandwatch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -362,7 +362,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Kamernet/743999698473531-senior-fullstack-net-developer'>Kamernet Senior Fullstack .Net Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Kamernet/743999698473531-senior-fullstack-net-developer'>Kamernet Senior Fullstack .Net Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -386,7 +386,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://touchbistro.applytojob.com/apply/GApJd27W61/Senior-Full-Stack-Developer-Internal-Systems'>Senior Full Stack Developer, Internal Systems - TouchBistro - Career Page</a></h5> 
+<h5><a href='http://touchbistro.applytojob.com/apply/GApJd27W61/Senior-Full-Stack-Developer-Internal-Systems'>Senior Full Stack Developer, Internal Systems - TouchBistro - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
